Fix/cleanup navbar items alignment (#119)
* stash

* vertical

--- a/src/bbnavbar_item/styles.module.scss
+++ b/src/bbnavbar_item/styles.module.scss
@@ -64,9 +64,6 @@ $navbar-item-min-width: var(--navbar-item-min-width, 6rem);
     text-align: center;
     text-decoration: none;
     width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
 
     * {
       padding: $navbar-item-padding;
@@ -174,7 +171,8 @@ $navbar-item-min-width: var(--navbar-item-min-width, 6rem);
 }
 
 .dropdownContainer:hover .dropdownContent {
-  display: block !important;
+  display: flex !important;
+  flex-direction: column;
 }
 
 /*
